k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-server 
  labels:
    app: my-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-server
  template:
    metadata:
      labels:
        app: my-server
    spec:
      containers:
        - name: my-server
          image: quay.io/vinamra2807/social-server:3
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
