k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-server
  labels:
    app: my-server
spec:
  selector:
    app: my-server
  ports:
    - name: server-tcp
      port: 5000
      protocol: TCP
  type: NodePort
